--- a/index.html
+++ b/index.html
@@ -21,29 +21,14 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1 id="logo"><a href="index.html">Landed</a></h1>
+			<div id="logo"><img src="images/logo.png"></div>
 			<nav id="nav">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li>
-						<a href="#">Layouts</a>
-						<ul>
-							<li><a href="left-sidebar.html">Left Sidebar</a></li>
-							<li><a href="right-sidebar.html">Right Sidebar</a></li>
-							<li><a href="no-sidebar.html">No Sidebar</a></li>
-							<li>
-								<a href="#">Submenu</a>
-								<ul>
-									<li><a href="#">Option 1</a></li>
-									<li><a href="#">Option 2</a></li>
-									<li><a href="#">Option 3</a></li>
-									<li><a href="#">Option 4</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="#" class="button primary">Sign Up</a></li>
+					<li><a href="index.html">Inicio</a></li>
+					<li><a href="#">&iquest;Qu&iacute;enes somos?</a></li>
+					<li><a href="elements.html">Filosof&iacute;a</a></li>
+					<li><a href="elements.html">Pol&iacute;ticas</a></li>
+					<li><a href="#" class="button primary">Cont&aacute;ctanos</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -52,9 +37,9 @@
 		<section id="banner">
 			<div class="content">
 				<header>
-					<h2>El futuro ha llegado</h2>
-					<p>And there are no hoverboards or flying cars.<br />
-						Just apps. Lots of mother flipping apps.</p>
+					<h2>Distribuidora y Log&iacute;stica Angelopolitana</h2>
+					<p>Profesionales comprometidos en cada entrega.<br />
+						Seguridad, puntualidad y calidad.</p>
 				</header>
 				<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 			</div>
