quienes somos section and filosofia section created

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 			<div id="logo"><img src="images/logo.png"></div>
 			<nav id="nav">
 				<ul>
-					<li><a href="index.html">Inicio</a></li>
-					<li><a href="#">&iquest;Qu&iacute;enes somos?</a></li>
-					<li><a href="elements.html">Filosof&iacute;a</a></li>
-					<li><a href="elements.html">Pol&iacute;ticas</a></li>
-					<li><a href="#" class="button primary">Cont&aacute;ctanos</a></li>
+					<li><a href="#header" class="scrolly">Inicio</a></li>
+					<li><a href="#one" class="scrolly">&iquest;Qui&eacute;nes somos?</a></li>
+					<li><a href="#two" class="scrolly">Filosof&iacute;a</a></li>
+					<li><a href="#three" class="scrolly">Pol&iacute;ticas</a></li>
+					<li><a href="#five" class="button primary scrolly">Cont&aacute;ctanos</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -54,23 +54,19 @@
 					<div class="row">
 						<div class="col-4 col-12-medium">
 							<header>
-								<h2>Odio faucibus ipsum integer consequat</h2>
-								<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+								<h2>&iquest;Qui&eacute;nes somos?</h2>
+								<p>DLA es una empresa poblana con presencia a nivel nacional</p>
 							</header>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-								Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-								nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-								augue varius tempus lobortis porttitor accumsan consequat
-								adipiscing lorem dolor.</p>
+							<p>Est&aacute; enfocada en la prestación de servicios logísticos
+								relacionados con el transporte de carga en general, así como
+								la comercialización de productos nacionales.</p>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-								adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-								Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-								mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-								ipsum dolor nullam.</p>
+							<p>Contamos con mas de 8 años en el ramo transportista, lo que nos ha
+								permitido brindar un servicio oportuno y confiable a todos nuestros
+								clientes.</p>
 						</div>
 					</div>
 				</div>
@@ -83,15 +79,20 @@
 			<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 			<div class="content">
 				<header>
-					<h2>Interdum amet non magna accumsan</h2>
-					<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+					<h2>Nuestra filosof&iacute;a</h2>
+					<p class="subtitle">Misi&oacute;n</p>
 				</header>
-				<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-					mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing
-					lorem.</p>
-				<ul class="actions">
-					<li><a href="#" class="button">Learn More</a></li>
-				</ul>
+				<p>Proporcionar a nuestros clientes
+					un servicio de calidad a través de
+					la mejora continua, buscando
+					lograr una mayor rentabilidad.</p>
+				<header>
+					<p class="subtitle">Visi&oacute;n</p>
+				</header>
+				<p>Ser reconocidos a nivel nacional
+					en el sector transportista como
+					una empresa eficiente y
+					responsable.</p>
 			</div>
 			<a href="#three" class="goto-next scrolly">Next</a>
 		</section>
