--- a/index.html
+++ b/index.html
@@ -102,15 +102,19 @@
 			<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 			<div class="content">
 				<header>
-					<h2>Interdum felis blandit praesent sed augue</h2>
-					<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+					<h2>Pol&iacute;tica de calidad</h2>
+					<p>Superando las expectativas de nuestros clientes</p>
 				</header>
-				<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-					mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing
-					lorem.</p>
-				<ul class="actions">
+				<p>“Es nuestro compromiso proveer un
+					servicio de Logística y Transporte
+					buscando ser congruentes con
+					nuestra misión, el cual deberá superar
+					las expectativas de nuestros clientes
+					con el fin de lograr una mejora
+					continua.”</p>
+				<!-- <ul class="actions">
 					<li><a href="#" class="button">Learn More</a></li>
-				</ul>
+				</ul> -->
 			</div>
 			<a href="#four" class="goto-next scrolly">Next</a>
 		</section>
@@ -119,48 +123,38 @@
 		<section id="four" class="wrapper style1 special fade-up">
 			<div class="container">
 				<header class="major">
-					<h2>Accumsan sed tempus adipiscing blandit</h2>
-					<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+					<h2>Log&iacute;stica</h2>
+					<p>Creamos alianzas comerciales con
+						empresas transportistas para cubrir
+						todas las necesidades de nuestros
+						clientes.</p>
 				</header>
+				<h2>Nuestra flotilla</h2>
 				<div class="box alt">
 					<div class="row gtr-uniform">
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-chart-area"></span>
-							<h3>Ipsum sed commodo</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+						<section class="col-6 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-truck-moving"></span>
+							<h3>Tractocamiones</h3>
 						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-comment"></span>
-							<h3>Eleifend lorem ornare</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+						<section class="col-6 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-box"></span>
+							<h3>Cajas secas de 40'</h3>
 						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-flask"></span>
-							<h3>Cubilia cep lobortis</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+						<section class="col-6 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-box"></span>
+							<h3>Cajas secas de 48'</h3>
 						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-paper-plane"></span>
-							<h3>Non semper interdum</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-file"></span>
-							<h3>Odio laoreet accumsan</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-lock"></span>
-							<h3>Massa arcu accumsan</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+						<section class="col-6 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-box"></span>
+							<h3>Cajas secas de 53'</h3>
 						</section>
 					</div>
 				</div>
-				<footer class="major">
+				<!-- <footer class="major">
 					<ul class="actions special">
 						<li><a href="#" class="button">Magna sed feugiat</a></li>
 					</ul>
-				</footer>
+				</footer> -->
 			</div>
 		</section>
 
@@ -168,16 +162,65 @@
 		<section id="five" class="wrapper style2 special fade">
 			<div class="container">
 				<header>
-					<h2>Magna faucibus lorem diam</h2>
-					<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+					<h2>Contáctanos</h2>
+					<p>Estamos para ayudarte a resolver todas tus dudas</p>
 				</header>
-				<form method="post" action="#" class="cta">
-					<div class="row gtr-uniform gtr-50">
-						<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email"
-								placeholder="Your Email Address" /></div>
-						<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
+				<section>
+					<form>
+						<div class="row gtr-uniform gtr-50">
+							<div class="col-6 col-12-xsmall">
+								<input type="text" name="name" id="nombre" value="" placeholder="Name" />
+							</div>
+							<div class="col-6 col-12-xsmall">
+								<input type="email" name="email" id="email" value="" placeholder="Email" />
+							</div>
+							<div class="col-12">
+								<textarea name="message" id="message" placeholder="Escribe tu mensaje" rows="6"></textarea>
+							</div>
+							<div class="col-12">
+								<ul class="actions">
+									<li><input type="submit" value="Enviar mensaje" class="primary" /></li>
+									<li><input type="reset" value="Limpiar" /></li>
+								</ul>
+							</div>
+						</div>
+					</form>
+				</section>
+				<section>
+					<div class="row">
+						<div class="col-4 col-12-xsmall">
+							<h3>Dirección</h3>
+							<ul>
+								<li class="last-links"><a
+										href="https://www.google.com/maps/place/Calle+30+1111,+Dos+Caminos,+94550+C%C3%B3rdoba,+Ver./@18.8997046,-96.9511041,17z/data=!4m13!1m7!3m6!1s0x85c4e510fb7b8cdf:0xf6a2c31ab55eb0ef!2sCalle+30+1111,+Dos+Caminos,+94550+C%C3%B3rdoba,+Ver.!3b1!8m2!3d18.8995577!4d-96.9512082!3m4!1s0x85c4e510fb7b8cdf:0xf6a2c31ab55eb0ef!8m2!3d18.8995577!4d-96.9512082"
+										target="_blank">Calle
+										30 No. 1111 Col. Nuevo Córdoba
+										Córdoba, Ver.
+										CP. 94550</a></li>
+								<li style="list-style-type: none;"></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-xsmall">
+							<h3>Teléfonos</h3>
+							<ul>
+								<li class="last-links"><a href="tel:2711049444">271 104 9444</a></li>
+								<li class="last-links"><a href="tel:2721179570">272 117 9570</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-xsmall">
+							<h3>Email</h3>
+							<ul>
+								<li class="last-links"><a href="mailto:logisticadla2020@gmail.com">logisticadla2020@gmail.com</a></li>
+								<li class="last-links"><a href="mailto:contabilidad@dlalogistica.com">contabilidad@dlalogistica.com</a>
+								</li>
+								<li class="last-links"><a href="mailto:tesoreria@dlalogistica.com">tesoreria@dlalogistica.com</a></li>
+								<li style="list-style-type: none;"></li>
+								<li style="list-style-type: none;"></li>
+								<li style="list-style-type: none;"></li>
+							</ul>
+						</div>
 					</div>
-				</form>
+				</section>
 			</div>
 		</section>
 
@@ -192,8 +235,9 @@
 				<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
-				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<li>DLA 2021&reg;. Todos los derechos reservados.</li>
+				<li>Diseño: <a href="https://html5up.net">HTML5 UP</a></li>
+				<li>Creación: <a href="https://digiall.mx">DigiallMX</a></li>
 			</ul>
 		</footer>
 
