new anchor for header

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body class="is-preload landing">
+	<div id="header-anchor"></div>
 	<div id="page-wrapper">
 
 		<!-- Header -->
@@ -24,7 +25,7 @@
 			<div id="logo"><img src="images/logo.png"></div>
 			<nav id="nav">
 				<ul>
-					<li><a href="#header" class="scrolly">Inicio</a></li>
+					<li><a href="#header-anchor" class="scrolly">Inicio</a></li>
 					<li><a href="#one" class="scrolly">&iquest;Qui&eacute;nes somos?</a></li>
 					<li><a href="#two" class="scrolly">Filosof&iacute;a</a></li>
 					<li><a href="#three" class="scrolly">Pol&iacute;ticas</a></li>
