design, content and pic changes

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 	<div id="page-wrapper">
 
 		<!-- Header -->
-		<header id="header">
+		<header id="header" style="position: fixed; background-color: rgba(255,255,255,0.78);">
 			<div id="logo"><img src="images/logo.png"></div>
 			<nav id="nav">
 				<ul>
 					<li><a href="#header-anchor" class="scrolly">Inicio</a></li>
 					<li><a href="#one" class="scrolly">&iquest;Qui&eacute;nes somos?</a></li>
 					<li><a href="#two" class="scrolly">Filosof&iacute;a</a></li>
-					<li><a href="#three" class="scrolly">Pol&iacute;ticas</a></li>
+					<li><a href="#three" class="scrolly">Equipo</a></li>
 					<li><a href="#five" class="button primary scrolly">Cont&aacute;ctanos</a></li>
 				</ul>
 			</nav>
@@ -37,9 +37,9 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="content">
-				<header>
-					<h2>Distribuidora y Log&iacute;stica Angelopolitana</h2>
-					<p>Profesionales comprometidos en cada entrega.<br />
+				<header style="background-color: rgba(21,21,21,0.51); padding: 24px; border-radius: 12px;">
+					<h2 style="color: white; font-weight: 900;">Distribuidora y Log&iacute;stica Angelopolitana</h2>
+					<p style="color: #fedd10">Profesionales comprometidos en cada entrega.<br />
 						Seguridad, puntualidad y calidad.</p>
 				</header>
 				<span class="image"><img src="images/pic01.jpg" alt="" /></span>
@@ -50,7 +50,7 @@
 		<!-- One -->
 		<section id="one" class="spotlight style1 bottom">
 			<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
-			<div class="content">
+			<div class="content" sytle="border-color: #fedd10 !important;">
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-12-medium">
@@ -103,26 +103,32 @@
 			<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 			<div class="content">
 				<header>
-					<h2>Pol&iacute;tica de calidad</h2>
-					<p>Superando las expectativas de nuestros clientes</p>
+					<h2>Equipo</h2>
+					<p class="subtitle">Log&iacute;stica</p>
 				</header>
-				<p>“Es nuestro compromiso proveer un
-					servicio de Logística y Transporte
-					buscando ser congruentes con
-					nuestra misión, el cual deberá superar
-					las expectativas de nuestros clientes
-					con el fin de lograr una mejora
-					continua.”</p>
+				<p>Creamos alianzas comerciales con
+					empresas transportistas para cubrir
+					todas las necesidades de nuestros
+					clientes.</p>
 				<!-- <ul class="actions">
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul> -->
+				<header>
+					<p class="subtitle">Nuestra flotilla</p>
+				</header>
+				<ul>
+					<li style="font-weight: bold;">Tractocamiones</li>
+					<li style="font-weight: bold;">Cajas secas de 40'</li>
+					<li style="font-weight: bold;">Cajas secas de 48'</li>
+					<li style="font-weight: bold;">Cajas secas de 53'</li>
+				</ul>
 			</div>
 			<a href="#four" class="goto-next scrolly">Next</a>
 		</section>
 
-		<!-- Four -->
+		<!-- Four
 		<section id="four" class="wrapper style1 special fade-up">
-			<div class="container">
+			<div class="container logistica-container">
 				<header class="major">
 					<h2>Log&iacute;stica</h2>
 					<p>Creamos alianzas comerciales con
@@ -151,13 +157,13 @@
 						</section>
 					</div>
 				</div>
-				<!-- <footer class="major">
+				<footer class="major">
 					<ul class="actions special">
 						<li><a href="#" class="button">Magna sed feugiat</a></li>
 					</ul>
-				</footer> -->
+				</footer>
 			</div>
-		</section>
+		</section> -->
 
 		<!-- Five -->
 		<section id="five" class="wrapper style2 special fade">
@@ -187,9 +193,9 @@
 						</div>
 					</form>
 				</section>
-				<section>
+				<section style="margin-top: 81px;">
 					<div class="row">
-						<div class="col-4 col-12-xsmall">
+						<!-- <div class="col-4 col-12-xsmall">
 							<h3>Dirección</h3>
 							<ul>
 								<li class="last-links"><a
@@ -200,24 +206,18 @@
 										CP. 94550</a></li>
 								<li style="list-style-type: none;"></li>
 							</ul>
-						</div>
-						<div class="col-4 col-12-xsmall">
-							<h3>Teléfonos</h3>
+						</div> -->
+						<div class="col-6 col-12-xsmall">
+							<h3>Teléfono</h3>
 							<ul>
-								<li class="last-links"><a href="tel:2711049444">271 104 9444</a></li>
 								<li class="last-links"><a href="tel:2721179570">272 117 9570</a></li>
 							</ul>
 						</div>
-						<div class="col-4 col-12-xsmall">
+						<div class="col-6 col-12-xsmall">
 							<h3>Email</h3>
 							<ul>
 								<li class="last-links"><a href="mailto:logisticadla2020@gmail.com">logisticadla2020@gmail.com</a></li>
-								<li class="last-links"><a href="mailto:contabilidad@dlalogistica.com">contabilidad@dlalogistica.com</a>
-								</li>
-								<li class="last-links"><a href="mailto:tesoreria@dlalogistica.com">tesoreria@dlalogistica.com</a></li>
-								<li style="list-style-type: none;"></li>
-								<li style="list-style-type: none;"></li>
-								<li style="list-style-type: none;"></li>
+								<li class="last-links"><a href="mailto:contacto@dlalogistica.com">contacto@dlalogistica.com</a></li>
 							</ul>
 						</div>
 					</div>
