--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<div class="col-4 col-12-medium">
 							<header>
 								<h2>&iquest;Qui&eacute;nes somos?</h2>
-								<p>DLA es una empresa poblana con presencia a nivel nacional</p>
+								<p>DLA es una empresa 100% mexicana con presencia a nivel nacional</p>
 							</header>
 						</div>
 						<div class="col-4 col-12-medium">
