--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <html>
 
 <head>
-	<title>Landed by HTML5 UP</title>
+	<title>DLA</title>
+	<link rel="icon" type="image/png" href="/favicon.png" />
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -116,7 +117,7 @@
 				<header>
 					<p class="subtitle">Nuestra flotilla</p>
 				</header>
-				<ul>
+				<ul style="text-align: justify; list-style-position: inside;">
 					<li style="font-weight: bold;">Tractocamiones</li>
 					<li style="font-weight: bold;">Cajas secas de 40'</li>
 					<li style="font-weight: bold;">Cajas secas de 48'</li>
@@ -209,7 +210,7 @@
 						</div> -->
 						<div class="col-6 col-12-xsmall">
 							<h3>Teléfono</h3>
-							<ul>
+							<ul style="text-align: center; padding: 0.0 !important;">
 								<li class="last-links"><a href="tel:2721179570">272 117 9570</a></li>
 							</ul>
 						</div>
@@ -227,14 +228,14 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-			<ul class="icons">
+			<!-- <ul class="icons">
 				<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 				<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 				<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 				<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 				<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-			</ul>
+			</ul> -->
 			<ul class="copyright">
 				<li>DLA 2021&reg;. Todos los derechos reservados.</li>
 				<li>Diseño: <a href="https://html5up.net">HTML5 UP</a></li>
