send form functionality privacy info forcing https

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>DLA</title>
+	<title>DLA | Distribuidora y Log&iacute;stica Angelopolitana</title>
 	<link rel="icon" type="image/png" href="/favicon.png" />
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -124,7 +124,7 @@
 					<li style="font-weight: bold;">Cajas secas de 53'</li>
 				</ul>
 			</div>
-			<a href="#four" class="goto-next scrolly">Next</a>
+			<a href="#five" class="goto-next scrolly">Next</a>
 		</section>
 
 		<!-- Four
@@ -238,6 +238,7 @@
 			</ul> -->
 			<ul class="copyright">
 				<li>DLA 2021&reg;. Todos los derechos reservados.</li>
+				<li><a href="/aviso.html">aviso de privacidad</a></li>
 				<li>Diseño: <a href="https://html5up.net">HTML5 UP</a></li>
 				<li>Creación: <a href="https://digiall.mx">DigiallMX</a></li>
 			</ul>
